--- a/analisis/codigos/visualizacion_produccion_y_precios.Rmd
+++ b/analisis/codigos/visualizacion_produccion_y_precios.Rmd
@@ -9,10 +9,11 @@ output: html_document
 Se presentan a continuación una breve descripción de las variables referidas a precios y producción del mercado hidrocarburífero argentino de largo plazo. Las mismas son el núcleo con el que se calcula el valor total de la producción y sus componentes: salario, ganancia y renta de la tierra. Los resultados aquí presentados, son parte del Proyecto de Investigación Orientada (PIO) Conicet-YPF "La apropiación de la renta petrolera diferencial por distintos sujetos sociales en Argentina comparado con Venezuela y Brasil (2002 a la actualidad)".
 
 ```{r setup, include=FALSE}
-
-rm(list =ls())
+#limpieza de memoria
+# rm(list =ls())
 gc()
 
+# configuración de impresión
 knitr::opts_chunk$set(echo = TRUE)
 
 # bibliotecas
@@ -24,21 +25,24 @@ library(ggplot2)
 library(plotly)
 library(readxl)
 source("functions_hidrocarburos.R")
+
+# parámetros para los graficos
+alpha_n = 0.7
 ```
 
 # Datos
 
-Las variables presentadas son el resultado del script (preprocesamiento)[https://github.com/mateosuster/pioYPFConicet/blob/main/analisis/codigos/preprocesamiento.Rmd], disponible en nuestro (repositorio de GitHub)[https://github.com/mateosuster/pioYPFConicet]. Allí se incluyen todas las bases necesarias para los cómputos, así como los resultados obtenidos. Además, la base de datos con nuestros resultados también se encuentra publicada en (Harvard Datverse)[https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/UTKSOE].
+Las variables presentadas son el resultado del script [preprocesamiento](https://github.com/mateosuster/pioYPFConicet/blob/main/analisis/codigos/preprocesamiento.Rmd), disponible en nuestro [repositorio de GitHub](https://github.com/mateosuster/pioYPFConicet). Allí se incluyen todas las bases necesarias para los cómputos, así como los resultados obtenidos. Además, la base de datos con nuestros resultados también se encuentra publicada en [Harvard Datverse](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/UTKSOE).
 
 ```{r}
-# datos de variables
+# datos 
 data = fread("../resultados/argentina/variables.csv")
 glimpse(data)
 
+#variables
 cat("\n")
 variables = unique(data$variable)
 variables
-
 
 # data %>% distinct(variable, codigo_variable)
 ```
@@ -62,8 +66,7 @@ tail(tcp_arg)
 
 Fuentes: 
 
-* [Ministerio de Hacienda, Informes
-Sectoriales](https://www.argentina.gob.ar/economia/politicaeconomica/regionalysectorial/informesproductivos) (1998-hoy). 
+* [Ministerio de Economía, Informes Sectoriales](https://www.argentina.gob.ar/economia/politicaeconomica/regionalysectorial/informesproductivos) (1998-hoy). 
 * [Secretaría de Energía - Regalias](http://datos.minem.gob.ar/dataset/regalias-de-petroleo-crudo-gas-natural-glp-gasolina-y-condensado) (1998-hoy)
 * [Secretaría de Energía - SESCO Downstream](http://datos.minem.gob.ar/dataset/produccion-de-petroleo-y-gas-tablas-dinamicas)(1993-hoy)
 * [Anuario de combustibles](http://datos.minem.gob.ar/dataset/anuarios-de-combustibles-1950-1999) (1911-1992)
@@ -74,11 +77,11 @@ Sectoriales](https://www.argentina.gob.ar/economia/politicaeconomica/regionalyse
 
 A grandes rasgos, la producción de petróleo crudo en Argentina presentó una tendencia creciente hasta finales del siglo XIX, para luego entrar en una fase decreciente. Este recorrido histórico no estuvo excento de momentos fluctuantes de auge y contracción. 
 
-La producción se inicia entre las décadas de 1910 y 1920. Las principales concesiones petroleras se encontraban en en Comodoro Rivadavia, Neuquén, Salta y Mendoza. Entre otras compañías, se encontraban Astra, Shell, Ferrocarrilera de Petróleo, Standard Oil y Gulf Oil. 
+La producción se inicia entre las décadas de 1910 y 1920 (IAPG, 2009). Las principales concesiones petroleras se encontraban en en Comodoro Rivadavia, Neuquén, Salta y Mendoza. Entre otras compañías, se encontraban Astra, Shell, Ferrocarrilera de Petróleo, Standard Oil y Gulf Oil. 
 
 Las inversiones extranjeras de la década del 1960, muchas tomando forma en los convenios de YPF con empresas privadas para los trabajos de perforación, exploración y producción, permiten un aumento marcado de la producción. Gracias a ello, por primera vez, en 1962 se logra, aunque sólo momentáneamente, el autoabastecimiento petrolero. En toda esa década se observa un sostenido aumento, el cual se detiene entrado a 1970, lo cual empalma con el embargo petrolero de 1973 y la suba exorbitante del precio a nivel mundial, primero en 1973/74 y luego nuevamente en 1979 (Gráfico N°#).  
 
-La década de 1990 está marcada por un sostenido aumento de la producción, la cual se revierte entrado en los 2000. La crisis del 2001 y la devaluación de la moneda incentivan la exportación en 2002, pero la tendencia decreciente no se logra revertir. La producción de petróleo crudo en 2020 cerró en niveles de 1988/89. El auge de la producción no convencional en Vaca Muerta, y la situación del mercado mundial de energía luego de la crisis destada por la pandemia del COVID-19, son determinantes que explican la situación del mercado hidrocarburífero actual y las tendencias a futuro.
+El cambio de marco regulatorio para la industria de la década de 1990 marca nuevamente un boom inversor y un sostenido aumento de la producción, pero no así de las reservas, la cual determina el agotamiento de los pozos productivos y una consecuente contracción iniciados los 2000 (Scheimberg, 2007), la cual se reforzó por los bajos precios del mercado interno respecto de las referencias internacionales (Gráfico N°#). La crisis del 2001 y la devaluación de la moneda incentivan la puesta en producción para exportar en 2002, pero la tendencia decreciente no se logra revertir. La producción de petróleo crudo en 2020 cerró en niveles de 1988/89. El auge de la producción no convencional en Vaca Muerta, y la situación del mercado mundial de energía luego de la crisis destada por la pandemia del COVID-19, son determinantes que explican la situación del mercado hidrocarburífero actual y las tendencias a futuro.
 
 Con respecto a las fuentes, la serie de largo plazo proviene del Anuario de Combustibles, de la cual contamos datos desde 1911 hasta 1992. Sus valores para el período 1980-1992 coinciden con los de EIA, por lo cual pueden usarse como fuentes alternativas. Asimismo, la evolución de SESCO es similar a la de EIA, salvo por pequeñas divergencias entre 2008 y 2013. La serie de Regalías, publicada por la Secretaría de Energía, presenta un nivel menor que las anteriores debido a las deducciones de producción que realizan las empresas para pagar un menor nivel de regalías hacia las provincias donde realizan la producción. Por último, la serie del Ministerio de Economía coincide con Regalías en sus primeros años, luego presenta un nivel intermedio entre Regalías y SESCO y a partir de 2009 toma a SESCO como fuente. Salvo el Anuario de Combustibles, el resto de las series presentan datos hasta los últimos años.
 
@@ -87,15 +90,13 @@ Con respecto a las fuentes, la serie de largo plazo proviene del Anuario de Comb
 ```{r}
 prod_crudo_plt <-  ggplot(data[ variable == "Producción de petróleo crudo", ],
                           aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico 1. Producción de petróleo crudo. Argentina (1911 - 2020)",
-       y = "Millones de barriles",
-       x = "Año")+
-  # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
+  geom_line(alpha = alpha_n)+
+  labs(y = "Millones de barriles", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 5))
 
-plot_ggplotly(prod_crudo_plt)
+plot_ggplotly(prod_crudo_plt,
+              "Gráfico N° 1. Producción de petróleo crudo", "Argentina (1911 - 2020)")
 ```
 
 ### Gas natural
@@ -107,18 +108,17 @@ La serie de largo plazo de producción de gas también proviene del Anuario de C
 ```{r}
 prod_gas_plt <-  ggplot(data[ variable == "Producción de gas natural", ],
                           aes(anio, 
-                              conversor_hidrocarburos(x = valor/1e6,from="MMBTU",to = "m3",producto = "gas",
+                              conversor_hidrocarburos(x = valor/1000,from="MMBTU",
+                                                      to = "m3",producto = "gas",
                                                         tipo = "cantidad")
                                                             , color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico 2. Producción de gas. Argentina (1913 - 2020)",
-       y = "MM m3", x = "Año",
-       caption = "Fuente: elaboración propia en base a Anuario de Combustibles, EIA, Ministerio de Economía, Secretaría de Energía (Base Regalías y SESCO)")+
+  geom_line(alpha = alpha_n)+
+  labs(y = "miles de millones de m3", x = "Año")+
+  scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(prod_gas_plt)
-
+plot_ggplotly(prod_gas_plt, "Gráfico N° 2. Producción de gas", "Argentina (1913 - 2020)")
 ```
 
 ### Convencional y no convencional
@@ -128,159 +128,164 @@ plot_ggplotly(prod_gas_plt)
 
 # Comercio exterior
 
-## Exportaciones
-
 * Fuentes
   + [SESCO Downstream](https://datos.gob.ar/dataset/energia-refinacion-comercializacion-petroleo-gas-derivados-tablas-dinamicas)
-  + INDEC 
-  + MECON
-  + UNComtrade
+  + [Instituto Nacional de Estadística y Censos - INDEC. Sistema de consulta de comercio exterior de bienes](https://comex.indec.gob.ar/?_ga=2.161062205.1655218852.1640868230-988551655.1634610950)  
+  + Ministerio de Economía. Base de datos "Indicadores de Minería e Hidrocarburos" (utiliza como fuentes IAPG e INDEC)
+  + [UN-Comtrade](https://comtrade.un.org/data/)
 
+## Exportaciones
 ### Petróleo crudo
+
+Las exportaciones de petróleo crudo permanecieron en valores bajos hasta principios de la década de 1990. Hasta esa fecha, nunca se exportaron más de 5 millones de barriles anuales. El derrotero siguiente se asemeja a la evolución de la producción: se presenta un aumento continuo hacia fines de la década y una caída tendencial en el presente siglo. Existió un repunte de las exportaciones en 2009, en línea con el aumento del precio, pero sin revertir la tendencia. En 2020, las exportaciones cerraron en 11 millones de barriles anuales. 
+
+En cuanto a las fuentes, UN-Comtrade provee la mayor información, en especial para valores históricos. Existen valores faltantes para varios años del período 1960-1980, posiblemente por inexistencia de exportaciones. SESCO comienza a publicarse en 1994, con valores semejantes a los de UN-Comtrade, salvo por una sobreestimación en 1997/98 y un bajo valor atípico para el año 2000. A partir del año 2001, todas las fuentes de información tienden a converger en valores similares 
 
 ```{r}
 expo_q_crudo_plt <- ggplot(data[ variable == "Exportación de petróleo crudo" & unidad == "barriles", ],
                           aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico #. Exportación de petróleo crudo. Argentina (1960 - 2020)",
-       subtitle = "Cantidades",
-       y = "Millones de Barriles",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Ministerio de Economía, INDEC, Secretaría de Energía (SESCO), UN-Comtrade")+
+  geom_line(alpha = alpha_n)+
+  labs(y = "Millones de Barriles",
+       x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
 
-plot_ggplotly(expo_q_crudo_plt) %>%
-  layout(title = list(text = paste0('Gráfico #. Exportación de petróleo crudo. Argentina (1960 - 2020)',
-                                    '<br>',
-                                    '<sup>',
-                                    'Cantidades',
-                                    '</sup>')))
+plot_ggplotly(expo_q_crudo_plt, 
+              "Gráfico N° 4. Exportación de petróleo crudo (cantidades)" ,
+              "Argentina (1960 - 2020)") 
 ```
 
+Por su parte, los valores exportados no caen a partir de los 2000 al igual que las cantidades debido los elevados precios. Durante 1996 y 2012 se exportaron valores superiores a los USD 2000 millones, excepto por los años 1998/99 y 2007/08, los cuales coinciden con las llamadas crisis asiática y la crisis de las hipotecas subprime. Esto se revierte con el descenso del precio posterior a 2015. En 2018/19 hay un aumento tanto de las cantidades exportadas así como de su valor. 
+
+Tiende a observarse mayor coincidencia entre las fuentes, principalmente entre UN-Comtrade, INDEC y MECON. Por su parte, SESCO tiende a subestimar el valor exportado y continúa teniendo un valor atípico para el año 2000.
 
 ```{r}
 expo_v_crudo_plt = ggplot(data[ variable == "Exportación de petróleo crudo" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico #. Exportación de petróleo crudo. Argentina (1960 - 2020)",
-       y = "Millones de USD",
-       subtitle= "En valor",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Ministerio de Economía, INDEC, Secretaría de Energía (SESCO), UN-Comtrade")+
+  geom_line(alpha = alpha_n)+
+  labs(y = "Millones de USD", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
 
-plot_ggplotly(expo_v_crudo_plt)
+plot_ggplotly(expo_v_crudo_plt, "Gráfico N°5. Exportación de petróleo crudo (valores)", "Argentina (1960 - 2020)")
 
 ```
 
 
-#### Gas natural
+### Gas natural
 
-Valores atipicos en  INDEC
+La exportación de gas en cantidades presenta una evolución similar a la de su par en petróleo crudo: una fuerte tendencia creciente a partir de 1990, que se detiene y revierte en 2004. En 2019 se observó un aumento de las cantidades exportadas, principalmente de la mano del desarrollo de los reservorios no convencionales. 
+
+Al igual que en el crudo, es llamativo como toda la fase de auge de las exportaciones se realizó en la década de 1990, en un momento de precios internacionales bajos, mientras que esta situación no se pudo sostener con el boom de precios de los 2000 debido al declino de la producción.   
+
+Aunque con una evolución similar, los valores son más dispersos entre las fuentes (posiblemente por la dificultad de medición de un producto gaseoso afectado por diversos factores, como temperatura, presión atmosféricas, etc.). Se puede establecer un piso de cantidades exportadas dado por SESCO y un techo de UN-Comtrade. Se excluyó la serie proveniente de INDEC por la presencia de ruido en toda la serie.
 ```{r}
-
-expo_q_gas_plt = ggplot(data[ variable == "Exportación de gas natural" & unidad == "MMBTU", ],
-                          aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico #. Exportación de gas natural. Argentina (1960 - 2020)",
-       subtitle = "Cantidades",
-       y = "MMBTU",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Ministerio de Economía, INDEC, Secretaría de Energía (SESCO), UN-Comtrade")+
+expo_q_gas_plt = ggplot(data[ variable == "Exportación de gas natural" & 
+                                unidad == "MMBTU", ],
+                          aes(anio, conversor_hidrocarburos(x = valor/1000, 
+                                                              from = "MMBTU", to ="m3",
+                                                            producto = "gas", 
+                                                            tipo = "cantidad")
+                              , color = fuente))+
+  geom_line(alpha = alpha_n)+
+  labs(y = "miles de millones de m3", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(expo_q_gas_plt)
+plot_ggplotly(expo_q_gas_plt,
+              "Gráfico N° 6. Exportación de gas natural (cantidades)",
+              "Argentina (1960 - 2020)")
 ```
 
+Con respecto a los valores exportados de gas natural, su evolución es similar que en las cantidades, aunque con una caída más moderada en la década del 2000 dado los altos precios.
 
+Es llamativa la dispersión entre los valores presentados por las fuentes: MECON y UN-Comtrade se agrupan por un lado, mientras que INDEC y SESCO poseen valores más bajos. Posiblemente esto se deba a la incorporación de otros productos hidrocarburíferos (derivados) en el primer grupo, o por deducciones del segundo.
 ```{r}
 expo_v_gas_plt = ggplot(data[ variable == "Exportación de gas natural" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico #. Exportación de gas natural. Argentina (1960 - 2020)",
-       subtitle = "En valor",
-       y = "Millones de USD",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Ministerio de Economía, INDEC, Secretaría de Energía (SESCO), UN-Comtrade")+
+  geom_line(alpha = alpha_n)+
+  labs(y = "Millones de USD", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(expo_v_gas_plt)
+plot_ggplotly(expo_v_gas_plt, "Gráfico N°7. Exportación de gas natural (valores)", 
+              "Argentina (1960 - 2020)")
 ```
 
 ## Importaciones
 #### Petróleo crudo
 
-Sesco se torna = 0 post 2010, hay que revisar comtrade e INDEC
+Las importaciones de petróleo crudo poseen 4 ciclos históricos de auge, los cuales inician y terminan en 1963-1968, 1972-1978 (interrumpido por la caída de 1975), 1992-2002 y 2011-2018. El ciclo presente en 1960 se basa en la incapacidad de la producción local de abastecer la demanda energética. Los volúmenes importados hasta 1980 estuvieron en valores históricos elevados, los cuales no se volvieron a repetir (superiores a los 10 millones de barriles anuales). La década de 1980 estuvo marcada por una importación prácticamente nula, dada la crisis de deuda desatada. El repunte de 1990, asociado al aumento de inversiones extranjeras y el cambio de regulación, choca con la crisis de 2001. El crecimiento de la post-convertibilidad no conlleva un aumento de la importación de crudo, principalmente por la sustitución por el gas como principal fuente primaria en la matriz energética. Sin embargo, luego del 2010, el déficit energético asociado a la caída de la producción empujó un aumento de la importación de crudo el cual se detiene en 2017.
+
+Al igual que en la exportación, para valores históricos, únicamente se cuenta con la información de UN-Comtrade. Con la publicación de SESCO a partir de 1994, los valores tienden a estar en el orden, salvo por los outliers de 1999 y 2000 (al igual que con la exportación).
 ```{r}
 impo_q_crudo_plt = ggplot(data[ variable == "Importación de petróleo crudo" & unidad == "barriles", ],
                           aes(anio, valor, color = fuente))+
-  geom_line()+
-  labs(title = "Gráfico #. Importaciones de petróleo crudo. Argentina (1994 - 2020)",
-       subtitle = "Cantidades",
-       y = "Millones de Barriles",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Secretaría de Energía (SESCO)")+
+  geom_line(alpha =alpha_n)+
+  labs(y = "Millones de Barriles", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-
-plot_ggplotly(impo_q_crudo_plt)
+plot_ggplotly(impo_q_crudo_plt, "Gráfico N° 8. Importaciones de petróleo crudo (cantidades)", 
+              "Argentina (1994 - 2020)")
 ```
 
+Los valores importados de petróleo crudo muestran 3 de los ciclos anteriormente señalados, los de la década de 1970, 1990 y 2010. El primero y último de ellos se encuentran fuertemente impulsados por el aumento del precio internacional, mientras que el restante se debe principalmente a las cantidades importadas.
 
+Las diferencias entre UN-Comtrade y SESCO, en sus momentos de sobre o subestimación, son similares a las observadas en las cantidades.
 ```{r}
 impo_v_crudo_plt = ggplot(data[ variable == "Importación de petróleo crudo" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
-  labs(title = "Gráfico #. Importaciones de petróleo crudo. Argentina (1994 - 2020)",
-       subtitle = "En valor",
-       y = "Millones de USD",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Secretaría de Energía (SESCO)")+
+  labs(y = "Millones de USD", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(impo_v_crudo_plt)
-
+plot_ggplotly(impo_v_crudo_plt,
+              "Gráfico N° 9. Importaciones de petróleo crudo (en valores)", 
+              "Argentina (1962 - 2020)")
 ```
 
 
 #### Gas natural
+
+La importación de gas natural presenta un aumento fuerte entre 1970 y 1974. A partir de ese momento, y hasta la contracción de 1992, las cantidades importadas no bajan de los 2 mil millones de m3 anuales. El crecimiento económico de la post-convertibilidad y los problemas de autoabastecimiento por el declino productivo generan el inicio de un nuevo ciclo importador de gas, el más importante en términos históricos, sólo detenido parcialmente por la crisis de 2008. Recíen en 2018 se puedo revertir y disminuir las importaciones, principalmente gracias al aumento de la producción de gas natural.
+
+En lo referente a las fuentes, UN-Comtrade presenta la serie más larga, cuyos valores son similares a los de MECON. En cambio, SESCO presenta diferencias con respecto a las dos últimas: mientras sobrestima en la década de 1990, subestima en los 2000. A partir de 2012 se abre una divergencia importante entre estos grupos de fuentes. En 2014 la diferencia llega a ser de un 100% abajo en los valores de SESCO. La presencia de valores faltantes en UN-Comtrade impiden formar un gráfico de lineas para los últimos años.
+
 ```{r}
 impo_q_gas_plt = ggplot(data[ variable == "Importación de gas natural" & unidad == "MMBTU", ],
-                          aes(anio, valor, color = fuente))+
+                          aes(anio, conversor_hidrocarburos(x = valor/1000, 
+                                                              from = "MMBTU", to ="m3",
+                                                            producto = "gas", 
+                                                            tipo = "cantidad"), color = fuente))+
   geom_line()+
-  labs(title = "Gráfico #. Importaciones de gas natural. Argentina (1994 - 2020)",
-       subtitle = "Cantidades",
-       y = "MMBTU",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Secretaría de Energía (SESCO)")+
+  geom_point()+
+  labs(y = "miles de millones de m3", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(impo_q_gas_plt)
+plot_ggplotly(impo_q_gas_plt, "Gráfico N° 10. Importaciones de gas natural (cantidades)", 
+              "Argentina (1962 - 2020)")
 ```
 
+El aumento de las cantidades importadas en 1980 y los 2000 también se observan en los valores. El boom de precios de las commodities en el siglo XXI impacta rotundamente en dicha variable, llegando a importarse más de USD 6000 millones en 2013, producto del déficit energético comentado anteriormente. El peso de la importación de gas natural en la balanza comercial llegó así a máximos históricos.
+
+Las fuentes de UN-Comtrade y SESCO vuelven a presentar las diferencias anteriormente señaladas.
 
 ```{r}
 impo_gas_v_plt= ggplot(data[ variable == "Importación de gas natural" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
-  labs(title = "Gráfico #. Importaciones de gas natural. Argentina (1994 - 2020)",
-       subtitle = "En valor",
-       y = "Millones de USD",
-       x = "Año",
-       caption = "Fuente: elaboración propia en base a Secretaría de Energía (SESCO)")+
+  labs(y = "Millones de USD", x = "Año")+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
 
-plot_ggplotly(impo_gas_v_plt)
+plot_ggplotly(impo_gas_v_plt,
+              "Gráfico N°11. Importaciones de gas natural (valores)", 
+              "Argentina (1994 - 2020)")
 ```
 
 # Precios
@@ -302,7 +307,7 @@ El precio de venta del petróleo crudo en el mercado interno posee claras oscila
 precio_crudo_plt <- ggplot(data[ variable == variables[7], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico 3. Precios del mercado interno del petróleo crudo. Argentina (1963 - 2020)",
+  labs(title = "Gráfico N° 3. Precios del mercado interno del petróleo crudo. Argentina (1963 - 2020)",
        y = "USD/barril", x = "Año",
        caption = "Fuente: elaboración propia en base a IDEE, Ministerio de Economía, Secretaría de Energía (Base Regalías) y Balances Contables de YPF")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -322,7 +327,7 @@ Los precios del mercado interno del gas natural poseen un comportamiento estable
 precio_gas_plt <-  ggplot(data[ variable == variables[8], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico 4. Precios del mercado interno del gas natural. Argentina (1963 - 2020)",
+  labs(title = "Gráfico N° 4. Precios del mercado interno del gas natural. Argentina (1963 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a IDEE, Ministerio de Economía, Secretaría de Energía (Base Regalías) y Balances Contables de YPF")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -367,7 +372,7 @@ Con respecto a los precios de referencia internacional del petróleo crudo, tant
 precio_ref_crudo_plt <-  ggplot(data[ variable == variables[9], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico 4. Precios de referencia del mercado mundial del crudo (1946 - 2020)",
+  labs(title = "Gráfico N° 4. Precios de referencia del mercado mundial del crudo (1946 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a EIA e Inflation Data")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -385,7 +390,7 @@ precio_expo_crudo_plt <-  ggplot(data[ variable == variables[10]
                                        & anio >1960, ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico #. Precios de exportacion de crudo. Argentina (1964 - 2020)",
+  labs(title = "Gráfico N° #. Precios de exportacion de crudo. Argentina (1964 - 2020)",
        y = "USD/barril", x = "Año",
        caption = "Fuente: elaboración propia en base a Sec. Energía, MECON, UN-Comtrade...")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -407,7 +412,7 @@ brecha_precio_crudo_plt <-  ggplot(data[
                                          ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico #. Precio de venta al mercado interno, exportacion y referencias del petróleo crudo (1960 - 2020)",
+  labs(title = "Gráfico N° #. Precio de venta al mercado interno, exportacion y referencias del petróleo crudo (1960 - 2020)",
        y = "USD/barril", x = "Año",
        caption = "Fuente: elaboración propia en base a EIA, Sec. de Energía y MECON")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -430,7 +435,7 @@ precio_ref_gas_plt <-  ggplot(data[ (variable %in% variables[11:27])&
                                            (!str_detect(variable, "GNL|LNG|OCDE|importación|exportación") ), ],
                           aes(anio, valor, color = variable))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico #. Precios de referencia del gas natural de EEUU y Europa (1960 - 2020)",
+  labs(title = "Gráfico N° #. Precios de referencia del gas natural de EEUU y Europa (1960 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a EIA y BP")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -450,7 +455,7 @@ precio_ref_gas_plt_2 <-  ggplot(data[ (variable %in% variables[11:27])&
                                         (anio >1983), ],
                           aes(anio, valor, color = variable))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico #. Precios de exportación e importación del gas natural de EEUU y Europa (1984 - 2020)",
+  labs(title = "Gráfico N° #. Precios de exportación e importación del gas natural de EEUU y Europa (1984 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a EIA y BP")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -470,7 +475,7 @@ precio_expo_gas_plt <-  ggplot(data[ (variable %in% variables[33])
                                      & anio >=1960, ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
-  labs(title = "Gráfico #. Precios de exportación del gas natural. Argentina (1962 - 2020)",
+  labs(title = "Gráfico N° #. Precios de exportación del gas natural. Argentina (1962 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a Sec. de Energía, MECON, IDEE y UN-Comtrade")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -490,7 +495,7 @@ precio_impo_gas_plt <-  ggplot(data[ (variable %in% variables[28:32]) &
                                        , ],
                           aes(anio, valor, color = variable))+#, group =codigo_variable))+
   geom_line(alpha = 0.8 , aes(linetype = fuente))+
-  labs(title = "Gráfico #. Precios de importación del gas natural. Argentina (1962 - 2020)",
+  labs(title = "Gráfico N° #. Precios de importación del gas natural. Argentina (1962 - 2020)",
        y = "USD/MMBTU", x = "Año",
        caption = "Fuente: elaboración propia en base a Sec. de Energía, MECON, IDEE y UN-Comtrade")+
   # scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+
@@ -505,7 +510,8 @@ plot_ggplotly(precio_impo_gas_plt)
 
 # Bibliografía
 
-IAPG
-Grilli y Yang (1988)
-Lewinger
++ Grilli, E. y Yang, M. (1988). "Primary Commodity Prices, Manufactured Goods Prices, and the Terms of Trade of Developing Countries: What the Long Run Shows". The World Bank Economic Review 2.
++ [IAPG (2009). "El abecé del Petróleo y del Gas". 3ra edición](https://www.iapg.org.ar/web_iapg/publicaciones/libros-de-interes-general/el-abece-del-petroleo-y-del-gas)
++ Lewinger, A. (2015). "Determinantes generales de los precios de las materia primas en el último ciclo largo (1971-2014)". Trabajo final de maestría. Maestría en relaciones y negociaciones internacionales.
++ [Scheimberg, S (2007). "Experiencia reciente y desafíos para la generación de renta petrolera 'aguas arriba' en la Argentina". Documento de proyecto. Comisión Económica para América Latina y el Caribe (CEPAL)](https://www.cepal.org/sites/default/files/publication/files/3576/S2007324_es.pdf)
 
